<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            android:paddingTop="100sp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:background="@drawable/smyrnioudis" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smyrnioudis"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/programmer"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"/>
                <TextView
                    android:id="@+id/smyrnioudis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hyperlink_smyrnioudis"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            android:paddingTop="50sp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:background="@drawable/lapakis" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lapakis"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/programmer"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"/>
                <TextView
                    android:id="@+id/lapakis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hyperlink_lapakis"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            android:paddingTop="50sp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:background="@drawable/konstantopoulos" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/konstantopoulos"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/programmer"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"/>
                <TextView
                    android:id="@+id/konstantopolous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hyperlink_konstantopoulos"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            android:paddingTop="50sp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:background="@drawable/dikonimaki" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dikonimaki"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/programmer"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"/>
                <TextView
                    android:id="@+id/dikonimaki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hyperlink_dikonimaki"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

